[gd_scene load_steps=17 format=2]

[ext_resource path="res://player/Player.gd" type="Script" id=1]
[ext_resource path="res://assets/player/idle/player-idle-1.png" type="Texture" id=2]
[ext_resource path="res://assets/player/idle/player-idle-2.png" type="Texture" id=3]
[ext_resource path="res://assets/player/idle/player-idle-3.png" type="Texture" id=4]
[ext_resource path="res://assets/player/idle/player-idle-4.png" type="Texture" id=5]
[ext_resource path="res://assets/player/run/player-run-1.png" type="Texture" id=6]
[ext_resource path="res://assets/player/run/player-run-2.png" type="Texture" id=7]
[ext_resource path="res://assets/player/run/player-run-3.png" type="Texture" id=8]
[ext_resource path="res://assets/player/run/player-run-4.png" type="Texture" id=9]
[ext_resource path="res://assets/player/run/player-run-5.png" type="Texture" id=10]
[ext_resource path="res://assets/player/run/player-run-6.png" type="Texture" id=11]
[ext_resource path="res://assets/player/hurt/player-hurt-1.png" type="Texture" id=12]
[ext_resource path="res://assets/player/hurt/player-hurt-2.png" type="Texture" id=13]
[ext_resource path="res://assets/audio/Cherry.wav" type="AudioStream" id=14]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ) ],
"loop": true,
"name": "idle",
"speed": 10.0
}, {
"frames": [ ExtResource( 12 ), ExtResource( 13 ) ],
"loop": true,
"name": "hurt",
"speed": 10.0
}, {
"frames": [ ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ) ],
"loop": true,
"name": "run",
"speed": 10.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 14, 25 )

[node name="Player" type="Area2D"]
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 2.5, 2.5 )
frames = SubResource( 1 )
animation = "run"
frame = 5
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 13 )
shape = SubResource( 2 )

[node name="GemAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 14 )
[connection signal="area_entered" from="." to="." method="_on_Player_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_Player_body_entered"]
